--- a/src/index.css
+++ b/src/index.css
@@ -69,6 +69,13 @@ body {
   background-position: center;
 }
 
+.rules {
+  background-image: url("/rules.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
 .outlined-text {
   color: rgba(0, 0, 0, 0.5);
   -webkit-text-stroke: 2px rgba(255, 255, 255, 0.473);
