feat: Content category now working

--- a/src/index.css
+++ b/src/index.css
@@ -69,6 +69,13 @@ body {
   animation: moveBg 30s linear infinite;
 }
 
+.content-bg {
+  background-image: url("/content.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
 .board {
   background-image: url("/board.jpg");
   background-size: contain;
