--- a/src/index.css
+++ b/src/index.css
@@ -90,6 +90,13 @@ body {
   background-position: center;
 }
 
+.mechanics-bg {
+  background-image: url("/mechanics.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
 .board {
   background-image: url("/board.jpg");
   background-size: contain;
